feat: implemented drag and drop for tasks from one category to another

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ VITE_SALT=10
 VITE_LOCAL_STORAGE_USER=user-details
 VITE_AUTH_TOKEN_KEY=auth-token
 VITE_AUTH_TOKEN_VALUE=TaskCraft-Authentication-Token
+VITE_LOCAL_STORAGE_TASK=taskcraft-tasks
+VITE_LOCAL_STORAGE_CATEGORY=taskcraft-category
